@@ -9,19 +9,31 @@
 // Mobile first
 // -----------------------------------------------------------------------------
 
+html, body{
+  height: 100%;
+}
 
 body {
-  display: flex;
   min-height: 100vh;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
   flex-direction: column;
 }
 
 .content-wrapper {
   -webkit-flex: 1 0 0; /* Safari 6.1+ */
   -ms-flex: 1 0 0; /* IE 10 */ 
-  flex: 1 0 0
+  flex: 1 0 0;
 }
 
+@media (max-width: $screen-sm-min) {
+  .touch .content-wrapper{
+    flex: none;
+  }
+}
 
 footer {
   border-top: 6px solid $mina-green;
