@@ -7203,9 +7203,16 @@ dl.actionMenu {
   .jumbotronbar .container {
     background-position: right 767px bottom -1px; } }
 
+html, body {
+  height: 100%; }
+
 body {
-  display: flex;
   min-height: 100vh;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
   flex-direction: column; }
 
 .content-wrapper {
@@ -7214,6 +7221,10 @@ body {
   -ms-flex: 1 0 0;
   /* IE 10 */
   flex: 1 0 0; }
+
+@media (max-width: 768px) {
+  .touch .content-wrapper {
+    flex: none; } }
 
 footer {
   border-top: 6px solid #4aa894; }
